css/styles.css
  /* Optional: Add custom styles here */
 
  body {
    font-family: 'Arial', sans-serif;
    background-color: #f8f9fa;
    max-width: 100%;
    position: relative
}

/* Prevent horz scroll (works on saffari and chrome*/
html, body {
    overflow-x: hidden;
  }
 
  

.prayer-times-table {
    margin-top: 20px;
    border: 1px solid #dee2e6;
    border-radius: 5px;
    overflow: hidden;
    max-height: 500px;
    max-width: 300px;
}

.prayer-times-table th,
.prayer-times-table td {
    text-align: center;
    padding: 10px;
}

.prayer-times-table th {
    background-color: #007bff;
    color: #fff;
}

.prayer-times-table tbody tr:nth-child(even) {
    background-color: #f8f9fa;
}

body {
    font-family: 'Arial', sans-serif;
    background-color: #f8f9fa;
    max-width: 100%;
}

.result-container {
    margin-top: 20px;
}

.result {
    margin-bottom: 10px;
}

.fts {
    max-width: 300px;
}

.current-day-highlight {
    background-color: #ffc107; /* Yellow background for highlighting */
    color: #000; /* Black text on the highlighted row */
    font-weight: bold; /* Make the text bold for better visibility */
}

